Updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a professor of anatomical sciences at Augusta University</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Originally from Egypt</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Creative Writing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Educator, so I'm already there, just want to take it to the next level :)</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Evans, GA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Want to develop innovative web-based educational resources for both teachers and students at various levels</p>
     </section>
 
     <footer id="footer">
